Added normal coords for copying

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!--necessary input box for the module to work-->
     <input type="text" value="/execute in minecraft:the_nether run tp @s 0 60 0" id="command" class="form-label" readonly><br>
 
+    <!--just normal coords to copy-->
+    <input type="text" id="coords" value="0 64 0" class="form-label" readonly><br>
+
     <button id="gen" onclick="copy()" class="btn btn-primary">Generate</button>
 
     <!--Invisible button to automatically copy-->
